# calcpol

./: CMakeLists.txt
include/: calc.h  cluster.h  core.h  efp.h  elec.h  fragments.h  matvec.h  types.h  utils.h
src/: CMakeLists.txt  calc.c  calcie.c  calcpol.c  calcre.c  cluster.c  core.c  efp.c  elec.c  fragments.c  main.c  utils.c
